<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
android:layout_marginTop="40dp"

    android:layout_gravity="center_horizontal"
    android:gravity="center_vertical"
    android:orientation="vertical">

    <RadioGroup
        android:layout_margin="20dp"
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/radioButton1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/vat_exclusive"
            android:checked="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/brown"
            android:buttonTint="@color/brown"
            android:layout_margin="10dp"/>

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/vat_inclusive"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/brown"
            android:buttonTint="@color/brown"
            android:layout_margin="10dp"/>

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/without_vat"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/brown"
            android:buttonTint="@color/brown"
            android:layout_margin="10dp"/>

    </RadioGroup>
</RelativeLayout>