<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:id="@+id/itemlayout" >

    <TextView
        android:id="@+id/textCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="Category :"
        android:textSize="18sp"

        android:layout_margin="10dp"
        android:textColor="@color/colorAccent" />
    <LinearLayout
        android:id="@+id/layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:orientation="horizontal"
        android:layout_below="@+id/textCategory"
        android:padding="5dp"
        android:weightSum="5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView16"
            android:layout_width="0dp"
            android:layout_height="wrap_content"


            android:layout_weight="0.8"
            android:text="@string/slNo"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:id="@+id/chekoutItemName2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:layout_weight="1.2"
            android:padding="5dp"
            android:text="@string/checkout_item"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:id="@+id/chekoutTotalItem2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:layout_weight="1"
            android:padding="5dp"
            android:text="@string/checkout_qty"
            android:textColor="@color/colorPrimary"
            />

        <TextView
            android:id="@+id/checkoutQty2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="5dp"
            android:text="@string/date"
            android:textColor="@color/colorPrimary"
            />

        <TextView
            android:id="@+id/chekoutPrice2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            android:padding="5dp"
            android:text="@string/amount"
            android:textColor="@color/colorPrimary"
            />


    </LinearLayout>
    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout1"
        android:orientation="horizontal"
        android:padding="5dp"
        android:weightSum="5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/slNo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"

            android:padding="5dp"
            android:text="1"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:id="@+id/item"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:layout_weight="1.2"
            android:padding="5dp"
            android:text="@string/invoive_no"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:id="@+id/qty"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:layout_weight="1"
            android:padding="5dp"
            android:text="2"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:id="@+id/date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="5dp"
            android:text="CASH"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:id="@+id/amount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            android:padding="5dp"
            android:text="@string/amount"
            android:textColor="@color/colorPrimary" />


    </LinearLayout>

    <TextView
        android:id="@+id/textTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Total Qty :"
        android:textSize="15sp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/colorAccent"
        android:layout_below="@+id/layout"
        android:layout_marginBottom="10dp"/>


</RelativeLayout>