<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/white"
    android:orientation="vertical">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/layoutSpinner"
        android:layout_width="match_parent"
        android:layout_height="50dp"

        android:layout_margin="20dp"
>

        <com.abremiratesintl.KOT.views.CustomSpinner
            android:id="@+id/spinItem"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:background="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/spinner_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/spinItem"
            app:layout_constraintEnd_toEndOf="@+id/spinItem"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/spinItem"
            app:layout_constraintTop_toTopOf="@+id/spinItem"
            app:srcCompat="@drawable/ic_arrow_down"/>
    </android.support.constraint.ConstraintLayout>



    <LinearLayout
        android:id="@+id/filter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layoutSpinner"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        android:visibility="gone">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal"
        android:visibility="visible">

        <EditText
            android:id="@+id/fromDate"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:focusable="false"
            android:gravity="center"
            android:hint="@string/choose_date"
            android:inputType="textPersonName"
            android:padding="5dp"
            android:singleLine="true"
            android:textColor="#FFFFFF"
            android:textColorHint="@color/grey"
            android:theme="@style/AppTheme.EditText" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="5dp"
            android:text="To"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/grey" />

        <EditText
            android:id="@+id/toDate"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:focusable="false"
            android:gravity="center"
            android:hint="@string/choose_date"
            android:inputType="textPersonName"
            android:padding="5dp"
            android:singleLine="true"
            android:text="@string/present"
            android:textColor="#FFFFFF"
            android:theme="@style/AppTheme.EditText"  />
    </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/brown"
        android:orientation="horizontal"
        android:layout_below="@+id/filter"
        android:padding="5dp"
        android:weightSum="5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView16"
            android:layout_width="0dp"
            android:layout_height="wrap_content"


            android:layout_weight="0.8"
            android:text="@string/slNo"
            android:textColor="@color/white"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

        <TextView
            android:id="@+id/chekoutItemName2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:layout_weight="1.2"
            android:padding="5dp"
            android:text="@string/checkout_item"
            android:textColor="@color/white"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <TextView
            android:id="@+id/chekoutTotalItem2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:layout_weight="1"
            android:padding="5dp"
            android:text="@string/checkout_qty"
            android:textColor="@color/white"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            />

        <TextView
            android:id="@+id/checkoutQty2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="5dp"
            android:text="@string/date"
            android:textColor="@color/white"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            />

        <TextView
            android:id="@+id/chekoutPrice2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            android:padding="5dp"
            android:text="@string/amount"
            android:textColor="@color/white"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            />


    </LinearLayout>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/reportRecyclerViewReport"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout1"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        android:visibility="visible"
        app:layoutManager="android.support.v7.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@+id/layout"
        tools:listitem="@layout/itemwise_report_data" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/emptyReportView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/empty_reports"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>


</RelativeLayout>