<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal"

        android:padding="5dp"
        android:weightSum="6">

        <TextView
            android:id="@+id/slNo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"


            android:layout_weight="0.8"
            android:text="@string/slNo"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:id="@+id/inv_no"
            android:layout_width="0dp"
            android:layout_height="wrap_content"


            android:layout_weight="1"
            android:text="@string/invoive_no"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:id="@+id/date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:layout_weight="1.2"
            android:padding="5dp"
            android:text="@string/date"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:id="@+id/vatable_amt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:layout_weight="1"
            android:padding="5dp"
            android:text="Vatable Amt"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:id="@+id/vat_amt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="5dp"
            android:text="Vat Amt"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:id="@+id/net_amt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            android:padding="5dp"
            android:text="Net Amt"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/colorPrimary" />


    </LinearLayout>
</LinearLayout>
